# circles

./: AGENTS.md  ARCHITECTURE.md  CLAUDE_CONTEXT.md  README.md  SESSION_LOG.md
circles/: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_MONGO_NATIVE_v12.md  CHAT_DEBUG_PLAYBOOK.md  CHAT_SYSTEM_ARCHITECTURE.md  CHAT_SYSTEM_ARCHITECTURE_v2.md  CLAUDE.md  DEBUG_PLAYBOOK.md  DEVELOPER_PLAYBOOK.md  DiscussionsModule.md  Dockerfile  Dockerfile.cron  EventsModule.md  LOCAL_DOCKER_RESTART_CHECKLIST.md  PEERIFY_CONTEXT.md  PEERIFY_MOVED.md  README.md  RELEASE_NOTES.md  SETUP.md  SYSTEM_MESSAGES_ENGINE.md  SYSTEM_MESSAGES_ENGINE_v2.md  bun.lockb  crontab  debug-users.ts  delete-user.ts  deploy-genesis2.sh  docker-compose.local.setup.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.setup.yml  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  install.sh  next.config.mjs  nginx.conf  (+10 more)
circles-app/: app.json  package-lock.json  package.json  sdk.ts
circles-mobile/: .env  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
circles-mobile/src-tauri/: Cargo.toml  tauri.conf.json
circles-mobile/src-tauri/src/: lib.rs  main.rs
circles-registry/: .env  Dockerfile  bun.lockb  docker-compose.override.yml  docker-compose.yml  nginx.conf  package.json
docs/: ARCHITECTURE.md  DEBUG_PLAYBOOK.md  DEPLOYMENT.md  DEV_TO_MAIN_RELEASE_CHECKLIST.md  ENVIRONMENT.md  LOCAL_DEVELOPMENT.md  ONBOARDING_ARCHITECTURE_30S.md  REPO_STRUCTURE_MAP.md  TROUBLESHOOTING.md  circles-deployment.md  create-module.md  (+5 more)
(+943 files in other folders)
