[package]
name = "circles-mobile"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "circles_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12.1"       # Library for HMAC generation
sha1 = "0.10.6"       # SHA-1 hashing algorithm
sha2 = "0.10.8"       # For SHA-256
hex = "0.4.3"         # Hex encoding/decoding
tauri-plugin-stronghold = "2" # for RSA key secure storage
rand = "0.8.5"        # For randomness
rsa = "0.9.6"         # For RSA key generation
aes = "0.8.4"         # For AES encryption
pbkdf2 = "0.12.2"     # For PBKDF2 key derivation
base64 = "0.22.1"     # For Base64 encoding
block-padding = "0.3.3"
cbc = "0.1.2"
md5 = "0.7.0"
once_cell = "1.20.2"
